--- a/index.html
+++ b/index.html
@@ -2,11 +2,69 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <!-- UTF-8 문자 인코딩을 설정하여 한글 및 다양한 언어를 지원 -->
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Project</title>
+    <!-- 뷰포트 설정: width=device-width는 페이지 너비를 기기의 너비에 맞추고,
+         initial-scale=1.0은 페이지가 처음 로드될 때 100% 비율로 표시되도록 설정합니다. -->
+    
+    <!-- 자주 사용하는 예시 -->
+    <!-- 1. 모바일에서 화면 크기를 제대로 맞추려면: -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
+    <!-- 2. 사용자가 확대/축소할 수 없도록 제한하려면: -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
+
+    <title>환영합니다</title>
+    <!-- 브라우저 탭에 표시될 문서 제목을 '환영합니다'로 설정 -->
+
+    <style>
+        /* body 스타일: 화면을 중앙 정렬하고, 배경색과 글꼴을 설정 */
+        body {
+            font-family: Arial, sans-serif; /* 글꼴을 Arial로 설정 */
+            background-color: #f4f4f4; /* 배경색을 밝은 회색으로 설정 */
+            display: flex; /* 중앙 정렬을 위해 Flexbox 사용 */
+            justify-content: center; /* 가로 중앙 정렬 */
+            align-items: center; /* 세로 중앙 정렬 */
+            height: 100vh; /* 화면 전체 높이 사용 */
+            flex-direction: column; /* 요소들을 세로로 나열 */
+        }
+
+        /* h1 스타일: 제목의 크기와 색상을 설정 */
+        h1 {
+            font-size: 2.5rem; /* 제목의 글자 크기를 2.5rem로 설정 */
+            color: #333; /* 글자 색상을 어두운 회색으로 설정 */
+        }
+
+        /* 버튼 스타일: 버튼의 모양과 크기를 설정 */
+        .button {
+            padding: 15px 30px; /* 버튼 안쪽 여백을 설정 */
+            background-color: #4CAF50; /* 버튼의 배경색을 녹색으로 설정 */
+            color: white; /* 버튼 텍스트 색상을 흰색으로 설정 */
+            text-decoration: none; /* 링크의 밑줄 제거 */
+            border-radius: 5px; /* 버튼의 모서리를 둥글게 설정 */
+            font-size: 1.2rem; /* 버튼 텍스트 크기를 1.2rem으로 설정 */
+            margin-top: 20px; /* 위쪽에 여백 20px 추가 */
+        }
+
+        /* 버튼에 마우스를 올렸을 때 스타일 */
+        .button:hover {
+            background-color: #45a049; /* 버튼 배경색을 조금 어두운 녹색으로 변경 */
+        }
+    </style>
 </head>
 <body>
+
+    <!-- 페이지의 제목 -->
     <h1>환영합니다!</h1>
-    <p>이것은 내가 만든 첫 번째 Netlify 사이트입니다.</p>
+
+    <!-- 게시판으로 이동하는 버튼 -->
+    <a href="board.html" class="button">게시판으로 이동</a>
+    <!-- 버튼을 클릭하면 "board.html"로 이동 -->
+
 </body>
 </html>
+
+</body>
+</html>
+
