--- a/write.html
+++ b/write.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>글 작성</title>
+    <title>게시글 작성</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #202124;
+            color: white;
             padding: 20px;
         }
 
         h1 {
             text-align: center;
-            color: #333;
+            color: white;
         }
 
         .form-container {
             width: 80%;
             margin: 0 auto;
-            background-color: white;
+            background-color: #333;
             padding: 20px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .form-group {
@@ -31,8 +32,8 @@
 
         .form-group label {
             display: block;
-            font-weight: bold;
             margin-bottom: 5px;
+            font-weight: bold;
         }
 
         .form-group input, .form-group textarea {
@@ -41,27 +42,29 @@
             font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            background-color: #202124;
+            color: white;
         }
 
         .submit-button {
             width: 100%;
             padding: 15px;
-            background-color: #4CAF50;
+            background-color: #4285f4;
             color: white;
-            font-size: 18px;
             border: none;
             border-radius: 5px;
+            font-size: 18px;
             cursor: pointer;
         }
 
         .submit-button:hover {
-            background-color: #45a049;
+            background-color: #357ae8;
         }
     </style>
 </head>
 <body>
 
-    <h1>글 작성</h1>
+    <h1>게시글 작성</h1>
 
     <div class="form-container">
         <form id="writeForm">
@@ -80,19 +83,19 @@
     </div>
 
     <script>
-        // 폼 제출 시 게시글을 서버로 저장하는 함수
+        // 폼 제출 시 서버로 게시글을 저장하는 함수
         document.getElementById('writeForm').addEventListener('submit', async function(e) {
             e.preventDefault(); // 기본 폼 제출 동작을 막습니다.
 
-            const title = document.getElementById('title').value; // 제목 입력값 가져오기
-            const content = document.getElementById('content').value; // 내용 입력값 가져오기
+            const title = document.getElementById('title').value;
+            const content = document.getElementById('content').value;
 
             try {
-                // Netlify Functions로 POST 요청을 보내 게시글 저장
-                const response = await fetch('/functions/savePost', {
-                    method: 'POST', // POST 메소드 사용
+                // Netlify Functions로 게시글 저장 요청을 보냅니다.
+                const response = await fetch('/.netlify/functions/savePost', {
+                    method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json', // 요청 본문이 JSON 형식임을 알림
+                        'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({ title, content }), // 입력한 제목과 내용을 서버로 전송
                 });
@@ -100,15 +103,14 @@
                 const result = await response.json();
                 alert(result.message); // 성공 메시지를 경고창으로 표시
 
-                // 게시글 작성 후 게시판 페이지로 이동
+                // 게시글 작성 후 게시판 목록 페이지로 이동
                 window.location.href = 'board.html';
             } catch (error) {
-                // 에러가 발생한 경우 콘솔에 출력
-                console.error('게시글을 저장하는 중 오류가 발생했습니다:', error);
+                // 오류가 발생하면 콘솔에 출력합니다.
+                console.error('게시글 저장 중 오류가 발생했습니다:', error);
             }
         });
     </script>
 
 </body>
 </html>
-
